--- a/poslogin.html
+++ b/poslogin.html
@@ -5,42 +5,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/ca14b9e588.js" crossorigin="anonymous"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="poslogin.css">
-    <title>Menu</title>
+    <title>Início</title>
 </head>
 
 <body>
 
     <div class="navegacao">
         <ul>
-            <li class="lista">
+            <li class="lista active">
                 <a href="#">
-                    <span class="icone"><ion-icon name="home-outline"></ion-icon></span>
+                    <span class="icone">
+                        <ion-icon name="home-outline"></ion-icon>
+                    </span>
                     <span class="titulo">Início</span>
                 </a>
             </li>
             <li class="lista">
                 <a href="#">
-                    <span class="icone"><ion-icon name="calendar-number-outline"></ion-icon></span>
+                    <span class="icone">
+                        <ion-icon name="calendar-number-outline"></ion-icon>
+                    </span>
                     <span class="titulo">Calendário</span>
                 </a>
             </li>
             <li class="lista">
                 <a href="#">
-                    <span class="icone"><ion-icon name="chatbubble-ellipses-outline"></ion-icon></span>
+                    <span class="icone">
+                        <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
+                    </span>
                     <span class="titulo">Mural</span>
                 </a>
             </li>
             <li class="lista">
                 <a href="#">
-                    <span class="icone"><ion-icon name="log-out-outline"></ion-icon></span>
+                    <span class="icone">
+                        <ion-icon name="log-out-outline"></ion-icon>
+                    </span>
                     <span class="titulo">Sair</span>
                 </a>
             </li>
         </ul>
     </div>
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+
+    <!-- FIM DO MENU LATERAL -->
+
+
+    <div class="container">
+        <div class="primeralinha"></div>
+        <div class="segundalinha"></div>
+        <div class="terceiralinha"></div>
+        <div class="quartalinha"></div>
+        <div class="quintalinha"></div>
+    </div>
+
+    
+    <!-- FUNÇÃO PARA O MENU -->
+
+
+    <script>
+
+        const lista = document.querySelectorAll('.lista');
+        function activeLink() {
+            lista.forEach((item) =>
+                item.classList.remove('active'));
+            this.classList.add('active');
+        }
+        lista.forEach((item) =>
+            item.addEventListener('click', activeLink));
+
+    </script>
+
+    <!-- FUNÇÃO PARA O SLIDE FUNCIONAR -->
+
+    <script></script>
 
 </body>
+
 </html>
