--- a/inicio.html
+++ b/inicio.html
@@ -16,7 +16,7 @@
     <div class="navegacao">
         <ul>
             <li class="lista active">
-                <a href="#">
+                <a href="">
                     <span class="icone">
                         <ion-icon name="home-outline"></ion-icon>
                     </span>
